syntax = "proto3";
import "google/protobuf/any.proto";
package authPackage;

service Auth {
	rpc Verify(VerifyRequest) returns (VerifyResponse) {};
	rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
}


// message StringOrNull {
// 	string value = 1;
//   }

message GetUsersRequest {
	repeated int32 ids = 1;
}

message User {
	int32 id = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	string avatar = 6;
	// optional google.protobuf.Any avatar = 6;
	// optional google.protobuf.Any phoneNumber = 7;
	// google.protobuf.Any createdAt = 9;
	// google.protobuf.Any updatedAt = 10;


}

message GetUsersResponse {
	repeated User users = 1;
}

message VerifyRequest {
	 string accessToken = 1;
}

message VerifyResponse {
	int32 id = 1;
	 string email = 2;
}
